--- a/cat-site.conf
+++ b/cat-site.conf
@@ -8,9 +8,9 @@ ProxyPassReverse /dcm "http://dcm-udv-01.kb.dk/dcm"
 RewriteEngine on
 
 RewriteCond %{REQUEST_URI}     .xq$
-RewriteRule (cnw|hartw|gw|schm|scht)/(.+).xq	/dcm/cat-site/$2.xq?c=$1 [QSA]
+RewriteRule (cnw|hartw|gw|schm|scht)/(.+).xq    /dcm/cat-site/$2.xq?c=$1 [QSA]
 
 RewriteCond  %{REQUEST_URI}     (cnw|hartw|gw|schm|scht)/(jquery|js|style|images)/
-RewriteRule (cnw|hartw|gw|schm|scht)/(jquery|js|style)/(.*)$ /dcm/cat-site/$2/$3 [R=302]
-</Location>
+RewriteRule (cnw|hartw|gw|schm|scht)/(jquery|js|style|library)/(.*)$ /dcm/cat-site/$2/$3
 
+</Location>
