now it finds its RISM stuff, etc
git-svn-id: svn+ssh://code-01.kb.dk/home/svn/repos/dcm_catalog_ui/trunk@208 28c26a83-a6a0-48cf-a850-7e1961c7d71e

--- a/cat-site.conf
+++ b/cat-site.conf
@@ -8,9 +8,10 @@ ProxyPassReverse /dcm "http://dcm-udv-01.kb.dk/dcm"
 RewriteEngine on
 
 RewriteCond %{REQUEST_URI}     .xq$
-RewriteRule (cnw|hartw|gw|schm|scht)/(.+).xq    /dcm/cat-site/$2.xq?c=$1 [QSA]
+RewriteRule (cnw|hartw|gw|schm|scht)/(.+).xq	/dcm/cat-site/$2.xq?c=$1 [QSA]
 
-RewriteCond  %{REQUEST_URI}     (cnw|hartw|gw|schm|scht)/(jquery|js|style|images)/
-RewriteRule (cnw|hartw|gw|schm|scht)/(jquery|js|style|library)/(.*)$ /dcm/cat-site/$2/$3
+RewriteCond  %{REQUEST_URI}     (cnw|hartw|gw|schm|scht)/(jquery|js|style|images|library|rism_sigla)/
+RewriteRule (cnw|hartw|gw|schm|scht)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
 
 </Location>
+
