--- a/cat-site.conf
+++ b/cat-site.conf
@@ -1,17 +1,15 @@
-rewriteLogLevel 3
-RewriteLog /var/log/httpd/rewrite_log
+LogLevel rewrite:trace3
 
-ProxyPass /dcm "ajp://localhost:8009/exist/rest/db"
-ProxyPassReverse /dcm "http://dcm-frontend-01.kb.dk/dcm"
+ProxyPass /dcm "http://localhost:8080/exist/rest/db/"
 
 <Location "/dcm/">
 RewriteEngine on
 
 RewriteCond %{REQUEST_URI}     .xq$
-RewriteRule (cnw|hartw|gw|schm|scht|schw)/(.+).xq	/dcm/cat-site/$2.xq?c=$1 [QSA]
+RewriteRule (cnw|hartw|gw)/(.+).xq	/dcm/cat-site/$2.xq?c=$1 [QSA]
 
-RewriteCond  %{REQUEST_URI}     (cnw|hartw|gw|schm|scht|schw)/(jquery|js|style|images|library|rism_sigla)/
-RewriteRule (cnw|hartw|gw|schm|scht|schw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
+RewriteCond  %{REQUEST_URI}     (cnw|hartw|gw)/(jquery|js|style|images|library|rism_sigla)/
+RewriteRule (cnw|hartw|gw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
 
 </Location>
 
