--- a/cat-site.conf
+++ b/cat-site.conf
@@ -6,10 +6,10 @@ ProxyPass /dcm "http://localhost:8080/exist/rest/db/"
 RewriteEngine on
 
 RewriteCond %{REQUEST_URI}     .xq$
-RewriteRule (cnw|hartw|gw)/(.+).xq	/dcm/cat-site/$2.xq?c=$1 [QSA]
+RewriteRule (cnw|hartw|nwgw|schw)/(.+).xq	/dcm/cat-site/$2.xq?c=$1 [QSA]
 
-RewriteCond  %{REQUEST_URI}     (cnw|hartw|gw)/(jquery|js|style|images|library|rism_sigla)/
-RewriteRule (cnw|hartw|gw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
+RewriteCond  %{REQUEST_URI}     (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/
+RewriteRule (cnw|hartw|gnwgw|schw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
 
 </Location>
 
