--- a/cat-site.conf
+++ b/cat-site.conf
@@ -1,18 +1,38 @@
 LogLevel rewrite:trace3
 
-<Location "/dcm/">
 
+ProxyPass /dcm "ajp://localhost:8009/exist/rest/db"
+# ProxyPassReverse /dcm "http://dcm-udv-01.kb.dk/dcm"
+ProxyPassReverse /dcm "http://localhost/dcm"
+
+<Location "/dcm/">
 RewriteEngine on
 
 RewriteCond %{REQUEST_URI}     .xq$
-
-RewriteRule (cnw|hartw|nwgw|schw)/(.+).xq	http://localhost:8080/exist/rest/db/cat-site/$2.xq?c=$1 [P,QSA]
+RewriteRule (cnw|hartw|nwgw|schw)/(.+).xq       /dcm/cat-site/$2.xq?c=$1 [QSA]
 
 RewriteCond  %{REQUEST_URI}     (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/
-RewriteRule (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ http://localhost:8080/exist/rest/db/cat-site/$2/$3 [P]
-
-RewriteCond  %{REQUEST_URI}     (editor|data.*)/(.*)$
-RewriteRule (editor|data.*)/(.*)$	http://localhost:8080/exist/rest/db/$1/$2 [P]
+RewriteRule (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
 
 </Location>
 
+#
+#
+#LogLevel rewrite:trace3
+#
+#<Location "/dcm/">
+#
+#RewriteEngine on
+#
+#RewriteCond %{REQUEST_URI}     .xq$
+#
+#RewriteRule (cnw|hartw|nwgw|schw)/(.+).xq	http://localhost:8080/exist/rest/db/cat-site/$2.xq?c=$1 [P,QSA]
+#
+#RewriteCond  %{REQUEST_URI}     (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/
+#RewriteRule (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ http://localhost:8080/exist/rest/db/cat-site/$2/$3 [P]
+#
+#RewriteCond  %{REQUEST_URI}     (editor|data.*)/(.*)$
+#RewriteRule (editor|data.*)/(.*)$	http://localhost:8080/exist/rest/db/$1/$2 [P]
+#
+#</Location>
+#
