--- a/build.xml
+++ b/build.xml
@@ -5,7 +5,7 @@
 
     <property name="build" value="build"/>
     <property name="service.src" value="./cat-site"/>
-    <property name="install" value="css,db,eot,gif,html,js,otf,png,svg,ttf,woff,xml,xq,xqm,xsl"/>
+    <property name="install" value="css,db,eot,gif,html,js,otf,png,jpg,svg,ttf,woff,xml,xq,xqm,xsl"/>
     <property name="hostport" value="localhost:8080"/>
 
     <property name="xconfig"     value="system/config/db/cat-site"/>
