cat-site.conf: update how images/ are handled
Since images/ are under cat-site/styles/ it must have its own rule.

--- a/cat-site.conf
+++ b/cat-site.conf
@@ -10,7 +10,10 @@ RewriteEngine on
 RewriteCond %{REQUEST_URI}     .xq$
 RewriteRule (cnw|hartw|nwgw|schw)/(.+).xq       /dcm/cat-site/$2.xq?c=$1 [QSA]
 
-RewriteCond  %{REQUEST_URI}     (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/
-RewriteRule (cnw|hartw|nwgw|schw)/(jquery|js|style|images|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3 
+RewriteCond  %{REQUEST_URI}     (cnw|hartw|nwgw|schw)/(images)/
+RewriteRule (cnw|hartw|nwgw|schw)/(images)/(.*)$ /dcm/cat-site/style/$2/$3
+
+RewriteCond  %{REQUEST_URI}     (cnw|hartw|nwgw|schw)/(jquery|js|style|library|rism_sigla)/
+RewriteRule (cnw|hartw|nwgw|schw)/(jquery|js|style|library|rism_sigla)/(.*)$ /dcm/cat-site/$2/$3
 
 </Location>
